# Algorithm-for-Skyline-Queries

./: .gitignore  CMakeLists.txt  README.md  data set.cpp  data set.h  graphic creation.cpp  graphic creation.h  main.cpp  skyline calculator.cpp  skyline calculator.h
